[tool.poetry]
name = "palavreco"
version = "0.1.2"
description = "Palavreco é um jogo para terminal baseado no Wordle, Termo e Letreco."
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"
packages = [{include = "palavreco"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.35.1"
rich = "^13.5.2"
rich-menu = "^0.1.3"
tinydb = "^4.8.0"

[tool.poetry.scripts]
palavreco = "palavreco.main:main"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
taskipy = "^1.12.2"
ruff = "^0.1.9"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "python palavreco/main.py"
test = "pytest -vv"
format = "isort palavreco && isort tests && ruff format palavreco && ruff format tests"